# rust-nes-emulator

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain
SMAS SMB1 Level Data/: smb.txt
assets/: 0.level  1.level  PUT ROM HERE
assets/defaults_20e_20x/: 1.level  2.level  checkpoint_10000.json  checkpoint_10000.t7  my_data.h5  my_data.json  my_data.txt  raw_1.level
docs/: index.html  nes_emulator-aebe8b62b3256cb3.js
rom_output/: modify_rom.py
src/: controller.rs  cpu.rs  event_loop.rs  ines.rs  level_consts.rs  level_out.rs  main.rs  main_memory.rs  mapper_0.rs  mapper_4.rs  mem.rs  memory.rs  nes.rs  ppu.rs  settings.rs  smb_hack.rs  smb_level.rs
tests/: mars608,happylee-smb-warpless,walkathon.fm2
tests/asm_playground/: Makefile  test.nes
tests/asm_playground/common/: build_rom.s
tests/c_playground/: Makefile  PALETTE.c  SPACY.nes  SPACY4.nes  lesson1.s  lesson11.nes  lesson11b.nes  lesson3.nes  lesson3.s  lesson4.nes  lesson4.s  lesson4b.nes  lesson4b.s  lesson6.nes  lesson9.nes  lesson9b.nes
tests/cpu_testing/: Makefile  test.nes  test.s
