[package]
name = "nes_emulator"
version = "0.1.0"
authors = ["Justin Michaud <justin@justinmichaud.com>"]

[dependencies]
phf = "0.7.21"
phf_macros = "0.7.21"
piston = "0.32.0"
piston2d-graphics = "0.21.1"
piston2d-opengl_graphics = "0.43.0"
image = "0.13.0"
rand = "0.3.15"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_window"

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten-sys = "0.3.0"

[[bin]]
name = "emulator"
path = "src/main.rs"

[[bin]]
name = "level_out"
path = "src/level_out.rs"